methods.basics.Methods.scala.error
Compilation error:
Methods:7: error: ')' expected but ';' found.
  pickupBaggle(à;)
                ^Methods:7: error: illegal start of statement
  pickupBaggle(à;)
                 ^